--- a/references.bib
+++ b/references.bib
@@ -41,7 +41,6 @@
 }
 
 @misc{chainsize,
-    author = "Daniel",
     title = "datadir size (MB)",
     year = {1 Mar 2016 (accessed 17 Aug 2017)}, 
     howpublished = "Retrieved from: \url{http://bc.daniel.net.nz/}"
@@ -55,22 +54,26 @@
 }
 
 @misc{pip,
-    author = "Python Software Foundation",
     title = "pip 9.0.1 : Python Package Index",
     year = {06 Nov 2016 (accessed 21 Aug 2017)}, 
     howpublished = "Retrieved from: \url{https://pypi.python.org/pypi/pip/}"
 }
 
 @misc{yeoman,
-    author = "Addy Osmani",
     title = "The web's scaffolding tool for modern webapps | Yeoman",
     year = {2017 (accessed 21 Aug 2017)}, 
     howpublished = "Retrieved from: \url{http://yeoman.io/}"
 }
 
 @misc{npm,
-    author = "npm, Inc",
     title = "npm",
     year = {2017 (accessed 21 Aug 2017)}, 
     howpublished = "Retrieved from: \url{http://npmjs.com/}"
+}
+
+@article{lightning,
+    author = "Joseph Poon",
+    title = "The Bitcoin Lightning Network: Scalable Off-Chain Instant Payments",
+    year = "January 14, 2016",
+    note = "Retrieved from: \url{https://lightning.network/lightning-network-paper.pdf}"
 }
