Add table and fix formatting

--- a/references.bib
+++ b/references.bib
@@ -1,16 +1,38 @@
+@misc{bitcoinfees,
+    author = "Cryptofees",
+    title = "{Cryptofees}: {Bitcoin}",
+    year = {2017 (accessed 21 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{http://cryptofees.net/}"
+}
+
 @misc{paypalfees,
     author = "PayPal",
     title = "{PayPal}: {Transaction} fees",
-    year = {2017 (accessed 17 Aug 2017)}, 
-    howpublished = "Retrieved from: \url{https://www.paypalobjects.com/digitalassets/c/website/marketing/na/us/ebooks/pdf/fees-page.pdf}"
+    year = {2017 (accessed 21 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{https://www.paypalobjects.com/digitalassets/c/website/marketing/na/us/ebooks/pdf/fees-page.pdf/}"
 }
 
-@misc{ccfees,
-    author = "Ben Dwyer",
-    title = "{CardFellow}: {Average} credit card processing fees",
-    year = {2017 (accessed 17 Aug 2017)}, 
-    howpublished = "Retrieved from: \url{https://www.cardfellow.com/average-fees-for-credit-card-processing/}"
+@misc{visafees,
+    author = "Visa",
+    title = "{Intra} {Visa} {Europe} {EEA}: {Multi}-lateral {Interchange} {Fees}",
+    year = {2017 (accessed 21 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{https://www.visaeurope.com/media/images/Intra%20VE%20EEA%20%40%202017_01_26-73-17763.pdf/}"
 }
+
+@misc{mastercardfees,
+    author = "MasterCard",
+    title = "{MasterCard}: 2017–2018 {U.}{S.} {Region} {Interchange} {Programs} and {Rates}",
+    year = {2017 (accessed 21 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{file:///C:/Users/mario/Downloads/merchant-interchange-rates.pdf/}"
+}
+
+@misc{stripefees,
+    author = "Stripe",
+    title = "{Stripe}: {Payments}",
+    year = {2017 (accessed 22 Aug 2017)}, 
+    howpublished = "Retrieved from: \url{https://stripe.com/us/pricing/}"
+}
+
 
 @article{ethereumwp,
     author = "Vitalik Buterin",
@@ -40,40 +62,37 @@
     howpublished = "Retrieved from: \url{https://mybroadband.co.za/news/banking/206742-bitcoin-and-ethereum-vs-visa-and-paypal-transactions-per-second.html}"
 }
 
-@misc{chainsize,
-    title = "datadir size (MB)",
-    year = {1 Mar 2016 (accessed 17 Aug 2017)}, 
-    howpublished = "Retrieved from: \url{http://bc.daniel.net.nz/}"
-}
-
 @article{paypalcasestudy,
     author = "Akara Sucharitakul",
-    title = "squbs: A New, Reactive Way for PayPal to Build Applications",
+    title = "squbs: {A} {New}, Reactive Way for {PayPal} to Build Applications",
     year = "2016",
     note = "Retrieved from: \url{https://www.paypal-engineering.com/2016/05/11/squbs-a-new-reactive-way-for-paypal-to-build-applications}"
 }
 
 @misc{pip,
-    title = "pip 9.0.1 : Python Package Index",
+    author = "\texttt{pip} 9.0.1",
+    title = "\texttt{pip}: {Python} {Package} {Index}",
     year = {06 Nov 2016 (accessed 21 Aug 2017)}, 
     howpublished = "Retrieved from: \url{https://pypi.python.org/pypi/pip/}"
 }
 
 @misc{yeoman,
-    title = "The web's scaffolding tool for modern webapps | Yeoman",
+    author = "Yeoman",
+    title = "{Yeoman}: {The} web's scaffolding tool for modern webapps",
     year = {2017 (accessed 21 Aug 2017)}, 
     howpublished = "Retrieved from: \url{http://yeoman.io/}"
 }
 
 @misc{npm,
-    title = "npm",
+    author = "\texttt{npm}",
+    title = "\texttt{npm}: {Node} {Package} {Manager}",
     year = {2017 (accessed 21 Aug 2017)}, 
     howpublished = "Retrieved from: \url{http://npmjs.com/}"
 }
 
 @article{lightning,
     author = "Joseph Poon",
-    title = "The Bitcoin Lightning Network: Scalable Off-Chain Instant Payments",
+    title = "{The} {Bitcoin} {Lightning} {Network}: {Scalable} {Off}-{Chain} {Instant} {Payments}",
     year = "January 14, 2016",
     note = "Retrieved from: \url{https://lightning.network/lightning-network-paper.pdf}"
 }
