--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,10 @@
 \documentclass{%
 	article}
-	
 \usepackage[utf8]{inputenc}
+
 \usepackage{url}
 \def\UrlBreaks{\do\/\do-}
+
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{verbatim}
@@ -15,6 +16,13 @@
 \usepackage{titling}
 \usepackage[T1]{fontenc}
 \usepackage{authblk}
+\usepackage{flafter}
+\usepackage{here}
+
+\usepackage{tabularx,booktabs,ragged2e}
+\newcolumntype{C}{>{\Centering\arraybackslash}X} % centered "X" column
+
+\usepackage[labelfont=small]{caption}
 
 \lstset{frame=tb,
   aboveskip=6mm,
@@ -28,11 +36,11 @@
 }
 \renewcommand\lstlistingname{Algorithm}
 
-\title{The Hadron Cryptographic Ledger Project: a framework for the rapid development and deployment of blockchain technologies.}
+\title{The Hadron Cryptographic Ledger Project: a framework for the rapid development\\and deployment of blockchain technologies.}
 \author{Stuart Farmer\thanks{stu@hadronledger.com}}
 \author{Mario Hernandez\thanks{mario@hadronledger.com}}
 \author{James Munsch\thanks{james@hadronledger.com}}
-\affil{The Hadron Project, whitepaper version 0.1}
+\affil{The Hadron Project, White Paper version 0.1}
 
 \begin{document}
 \sloppy
@@ -40,7 +48,7 @@
 \begin{titlingpage}
     \maketitle
     \begin{abstract}
-        Blockchain application development is unnecessarily hard, partially because of how new the technology is, but also because of certain imposed limitations on the current status quo of how blockchains are used today. In this paper, we discuss the problems with current blockchain implementations and a solution to these problems. We introduce Hadron: a software package of development tools that includes a blockchain generator, community collaboration tools, and independent chain-to-chain communication to create vast networks of blockchain applications that can transfer any asset across them.
+	Blockchain application development is unnecessarily hard, partially because of how new the technology is, but also because of certain imposed limitations on the current status quo of how blockchains are used today. In this paper, we discuss the problems with current blockchain implementations and a solution to these problems. We introduce Hadron: a software package of development tools that includes a blockchain generator, community collaboration tools, and independent chain-to-chain communication to create vast networks of blockchain applications that can transfer any asset across them.
     \end{abstract}
 \end{titlingpage}
 
@@ -60,7 +68,7 @@ There are many fundamental flaws with the blockchain architecture that prevent i
 \textbf{Transaction Fees}
 \end{center}
 
-Firstly, let’s take a look at the problem with transaction fees from an end user standpoint. The key to success in the crypto space is mass adoption of Bitcoin in the international market. As it stands at this time of writing, the average transaction fee for a Bitcoin transaction is at around 6\%. Compared to centralized systems such as PayPal\,\cite{paypalfees}, Mastercard, and Visa\,\cite{ccfees}, Bitcoin is actually about twice as expensive.
+Firstly, let’s take a look at the problem with transaction fees from an end user standpoint. The key to success in the crypto space is mass adoption of Bitcoin in the international market. As it stands at this time of writing, the average transaction fee for a Bitcoin transaction is at around 6\%\,\cite{bitcoinfees}. Compared to centralized systems such as PayPal\,\cite{paypalfees}, Mastercard\,\cite{mastercardfees}, and Visa\,\cite{visafees}, Bitcoin is actually about twice as expensive.
 
 It should be noted the fundamentals of cryptocurrency are why users feel justified with this discrepancy. The decentralized nature of ownership outweighs the additional costs. However, on a macroeconomic scale, cost efficiency will outweigh fundamental allure.
 
@@ -69,6 +77,27 @@ It should be noted the fundamentals of cryptocurrency are why users feel justifi
 \end{center}
 	
 While this is true, the Ethereum blockchain was not designed as a transfer of value network\,\cite{ethereumwp} like Bitcoin was, but rather a smart contracts network to enable trustless and decentralized software systems. We have to remember that users instead pay for the number of operations that occur on the chain and that this number of operations continues to increase as more and more complicated smart contracts are deployed. A major selling point of Ethereum was the ability to add smart contracts as ‘libraries’ that function in the same way as frameworks in other software development stacks which is to automate operations and processes so users do not have to rewrite them over and over again. Thus, we can safely assume that over time, as more complex smart contracts are made and more libraries are integrated, the cost of interacting with the main Ethereum blockchain. This mechanism by charging developers on operations disincentivizes innovation and complex smart contract systems that Ethereum needs to be a long term success.
+
+
+
+\begin{figure}[htbp!]
+\centering
+\resizebox{\textwidth}{!}{%
+\setlength\extrarowheight{2pt}
+\begin{tabularx}{\textwidth}{l X l}
+\toprule
+\textbf{Service Name} & \textbf{Average Transaction Cost}                                                                                         & \textbf{Paying Party} \\ \cmidrule[\heavyrulewidth]{1-3}
+Bitcoin\,\cite{bitcoinfees}			& {\small{$\sim$}}6\% (variable) & Sender \\ \midrule
+PayPal\,\cite{paypalfees}			& 2.9\% + \$0.30 & Receiver \\ \midrule
+Visa\,\cite{visafees}				& Based on merchant type. As low as 0.20\% for utility payment, to as high as 1.50\% for standard merchants. & Receiver \\ \midrule
+Mastercard\,\cite{mastercardfees}	& Based on merchant type. As low as 0.00\% + \$0.65 for utility payment, to as high as 2.95\% + \$0.10 for standard merchants. & Receiver \\ \midrule
+Stripe\,\cite{stripefees}			& 2.9\% + \$0.30 & Receiver \\ \bottomrule
+\end{tabularx}%
+}\par
+\medskip
+Table 1: Various payment services and their transaction costs.
+\end{figure}
+
 
 \begin{center}
 \textbf{Bloated Chains}
@@ -133,7 +162,7 @@ It is possible to create proof-of-work, proof-of-stake, and any other rewarding 
 
 \begin{lstlisting}[
 	belowskip=1mm,
-	title={\small\textnormal{Here is an example of a simple proof-of-work contract that could be deployed on a chain to simulate classical proof-of-work.}},
+	title={\small\textnormal{Listing 1: Example of a simple proof-of-work contract that could be deployed on a chain to simulate classical proof-of-work.}},
 	captionpos=b]
 pragma solidity ^0.4.15;
 
@@ -148,7 +177,6 @@ contract RewardedAsset {
     address public owner;
     mapping(address => uint256) balances;
     mapping(address => mapping (address => uint256)) allowed;
-...
 
     function disperseRewards (bool success) onlyOwner() {
         if (lastBlock < block.number) {
@@ -206,11 +234,10 @@ The purpose of the Hadron Hub is to host a decentralized package repository, nam
 \textbf{Public Package Manager}
 \end{center}
 
-Like other development suites, Hadron has the ability to create smart contract packages. Using a macro templating system, we are able to abstract common Solidity contract types such as ERC20 tokens, Ethereum Name Services, and the Etherdelta decentralized exchange, package them up into contracts that only take a set of arguments, and allow deployment across private chains in as simple as a manner of running ‘\texttt{hpm install ens}’ from a CLI console, or sending an API request to do the same through the administrative dashboard included in the Hadron Wrapper. This takes the headaches out of redeploying commonly used smart contracts, and allows the packaging of highly complex smart applications for quick distribution.
-
 \begin{lstlisting}[
+	aboveskip=1mm,
 	belowskip=1mm,
-	title={\small\textnormal{Example of a Solidity Template for ERC20 tokens with corresponding JSON input. Installation of such contract could be accomplished via ‘\texttt{hpm install erc20 --args}’, or from the Hadron Wrapper administration panel.}},
+	title={\small\textnormal{Listing 2: Example of a Solidity Template for ERC20 tokens with corresponding JSON input. Installation of such contract could be accomplished via ‘\texttt{hpm install erc20 --args}’, or from the Hadron Wrapper administration panel.}},
 	captionpos=b]
 pragma solidity ^{{solidity_version}};
 
@@ -223,8 +250,10 @@ contract {{contract_name}} {
     address public owner;
     mapping(address => uint256) balances;
     mapping(address => mapping (address => uint256)) allowed;
+   
     
 ...
+
 
 {
     'solidity_version':'0.4.15',
@@ -234,6 +263,8 @@ contract {{contract_name}} {
     'total_supply':'1000000'
 }
 \end{lstlisting}
+
+Like other development suites, Hadron has the ability to create smart contract packages. Using a macro templating system, we are able to abstract common Solidity contract types such as ERC20 tokens, Ethereum Name Services, and the Etherdelta decentralized exchange, package them up into contracts that only take a set of arguments, and allow deployment across private chains in as simple as a manner of running ‘\texttt{hpm install ens}’ from a CLI console, or sending an API request to do the same through the administrative dashboard included in the Hadron Wrapper. This takes the headaches out of redeploying commonly used smart contracts, and allows the packaging of highly complex smart applications for quick distribution.
 
 As more blockchains are added to the Wrapper, support for their contract languages will be added to the Hub as well. Developers can upload their own contracts to support the community. Interaction with the Hub will be over the Interplanetary File System (IPFS) so that all services remain distributed and decentralized.
 
@@ -271,7 +302,10 @@ The Ledger is a public service that distributes the work of smart contract deplo
 
 Payment channels are represented in pure Solidity smart contract code that run on each private blockchain. When a user wants to initiate a swap, they send a request both the Hadron Ledger service and the chain they want to swap with outlining the terms of their expected transfer. The request is comprised of the sender and receiver address on both chains, as well as the value of the asset being swapped. For example, a payload would look like this:
 
-\begin{lstlisting}
+\begin{lstlisting}[
+	belowskip=1mm,
+	title={\small\textnormal{Listing 3: Example of the payload from a payment channel.}},
+	captionpos=b]
 {
     Private-chain-1 : {
         Sender-address : 0x000,
@@ -289,28 +323,28 @@ Payment channels are represented in pure Solidity smart contract code that run o
 
 When the computing cluster receives this payload, the cluster will compile the Solidity contract code into bytecode that must be deployed onto each chain within the next block. The opposing chains’ bytecodes are sent to each other and signed with a public identifier key so that they can independently verify that the correct contract code was indeed deployed in the next block on the chain.
 
-\begin{figure}[htbp!]
+\begin{figure}[H]
 \centering
-\includegraphics[scale=0.5]{fig1.jpg}
-\caption{Chain A initiates a swap by sending a message to the Ledger. The Ledger then takes the swap requirements and compiles them into Solidity bytecode to be deployed on each chain.}
+\includegraphics[scale=0.45]{fig1.jpg}
+\caption{\small\textnormal{Chain A initiates a swap by sending a message to the Ledger. The Ledger then takes the swap requirements and compiles them into Solidity bytecode to be deployed on each chain.}}
 \end{figure}
 
-\begin{figure}[htbp!]
+\begin{figure}[H]
 \centering
-\includegraphics[scale=0.5]{fig2.jpg}
-\caption{The bytecode is signed with each chain's public key and sent to both parties. Chain A deploys their contract. Chain B keeps a copy to verify later.}
+\includegraphics[scale=0.45]{fig2.jpg}
+\caption{\small\textnormal{The bytecode is signed with each chain's public key and sent to both parties. Chain A deploys their contract. Chain B keeps a copy to verify later.}}
 \end{figure}
 
-\begin{figure}[htbp!]
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.5]{fig3.jpg}
-\caption{The same occurs for Chain B.}
+\caption{\small\textnormal{The same occurs for Chain B.}}
 \end{figure}
 
-\begin{figure}[htbp!]
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.5]{fig4.jpg}
-\caption{Assuming that this is an agreeable swap, both chains deploy the contract, and check to see if the other party has done the same by searching for the bytecode on the latest block. If this has not occurred, the chain does not have to follow through with any obligations, and the transaction reverts without loss of funds.}
+\caption{\small\textnormal{Assuming that this is an agreeable swap, both chains deploy the contract, and check to see if the other party has done the same by searching for the bytecode on the latest block. If this has not occurred, the chain does not have to follow through with any obligations, and the transaction reverts without loss of funds.}}
 \end{figure}
 
 If the originator chain fails to deploy their contract while the recipient chain follows through, the contract on the recipient chain will self-destruct and remit funds back to their account. On the flip side, if the originator sets up a contract, but the recipient does not agree to the terms, the originators contract will be destroyed they will receive their locked up funds. 
@@ -319,16 +353,16 @@ Assuming that both parties are interested pursuing the swap, they must then foll
 
 To make sure that the payments have been sent through in a timely fashion, each chain can ‘ping’ their contracts which invokes a time lock method. If the contract is too many blocks behind the agreed upon time lock, it is assumed that the other party is not going to finalize the payment channel, and the contract is destroyed. This incentives the opposing party to follow through with their obligations because they risk losing their funds. It also incentives the originator to ping their contract as soon as possible, because in the situation where the originator has received funds on the opposing chain but not on their chain, they can remit their funds back to themselves and in effect have gained ‘free’ assets on the opposing chain because the time lock had expired on their own to claim the assets.
 
-\begin{figure}[htbp!]
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.5]{fig5.jpg}
-\caption{Chain A's best economic option is to submit the funds and resolve their own contract as soon as possible, because if Chain B acts before them, Chain A will lose funds. Inversely, Chain A could also profit if Chain B decided not to redeem their funds. So it is also in Chain A's best interest to resolve their contract as soon as possible}
+\caption{\small\textnormal{Chain A's best economic option is to submit the funds and resolve their own contract as soon as possible, because if Chain B acts before them, Chain A will lose funds. Inversely, Chain A could also profit if Chain B decided not to redeem their funds. So it is also in Chain A's best interest to resolve their contract as soon as possible}}
 \end{figure}
 
-\begin{figure}[htbp!]
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.5]{fig6.jpg}
-\caption{The best case scenario for both parties, therefore, is to resolve the payment channel on the opposing chain, and resolve the contract on their own chain as soon as possible. By adding economic incentive to do this, the network benefits from quick chain-to-chain transfers.}
+\caption{\small\textnormal{The best case scenario for both parties, therefore, is to resolve the payment channel on the opposing chain, and resolve the contract on their own chain as soon as possible. By adding economic incentive to do this, the network benefits from quick chain-to-chain transfers.}}
 \end{figure}
 
 \section{Example Workflow}
@@ -369,6 +403,7 @@ The goal of the Hadron project is to provide a suite of tools that makes the rap
 Furthermore, by providing a centralized community, innovation can prosper and build upon itself, leading to newer and greater technologies and accelerating the industry as a whole.
 
 Lastly, through the Hadron Ledger, we are able to connect all of these projects together on a single routing system that facilitates swap transactions so that private chains can retain the benefits of self-management and still take advantage of a larger ecosystem of great applications.
+
 
 \bibliography{references}{}
 \bibliographystyle{ieeetr}
