Keyword template added, fixed formatting

--- a/references.bib
+++ b/references.bib
@@ -23,7 +23,7 @@
     author = "MasterCard",
     title = "{MasterCard}: 2017–2018 {U.}{S.} {Region} {Interchange} {Programs} and {Rates}",
     year = {2017 (accessed 21 Aug 2017)}, 
-    howpublished = "Retrieved from: \url{file:///C:/Users/mario/Downloads/merchant-interchange-rates.pdf/}"
+    howpublished = "Retrieved from: \url{https://www.mastercard.us/content/dam/mccom/en-us/documents/merchant-interchange-rates.pdf/}"
 }
 
 @misc{stripefees,
