--- a/main.tex
+++ b/main.tex
@@ -24,6 +24,11 @@
 \usepackage{tabularx,booktabs,ragged2e}
 \newcolumntype{C}{>{\Centering\arraybackslash}X} % centered "X" column
 
+\usepackage{titlesec}
+\titlelabel{\thetitle.\quad}
+\titleformat{\subsection}[block]{\hspace{2em\large\bfseries}}{\thesubsection}{1em}{}
+
+
 \usepackage[labelfont=small]{caption}
 
 \lstset{frame=tb,
@@ -50,7 +55,8 @@
 \begin{titlingpage}
     \maketitle
     \begin{abstract}
-	Blockchain application development is unnecessarily hard, partially because of how new the technology is, but also because of certain imposed limitations on the current status quo of how blockchains are used today. In this paper, we discuss the problems with current blockchain implementations and a solution to these problems. We introduce Hadron: a software package of development tools that includes a blockchain generator, community collaboration tools, and independent chain-to-chain communication to create vast networks of blockchain applications that can transfer any asset across them.
+	Blockchain application development is unnecessarily hard, partially because of how new the technology is, but also because of certain imposed limitations on the current status quo of how blockchains are used today. In this paper, we discuss the problems with current blockchain implementations and a solution to these problems. We introduce Hadron: a software package of development tools that includes a blockchain generator, community collaboration tools, and independent chain-to-chain communication to create vast networks of blockchain applications that can transfer any asset across them.\\\\
+	{\bf Keywords:} enter, keyword, here.
     \end{abstract}
 \end{titlingpage}
 
@@ -66,9 +72,7 @@ Laid out in this white paper is our critiques of the current state of the market
 
 There are many fundamental flaws with the blockchain architecture that prevent it from becoming a mainstream technology. These flaws exist on both the user’s side as well as the developer\,/\,service provider’s side. Laid out are the areas in which we improve upon the current blockchain implementations with this project.
 
-\begin{center}
-\textbf{Transaction Fees}
-\end{center}
+\subsection{Transaction Fees}
 
 Firstly, let’s take a look at the problem with transaction fees from an end user standpoint. The key to success in the crypto space is mass adoption of Bitcoin in the international market. As it stands at this time of writing, the average transaction fee for a Bitcoin transaction is at around 6\%\cite{bitcoinfees}. Compared to centralized systems such as PayPal\cite{paypalfees}, Mastercard\cite{mastercardfees}, and Visa\cite{visafees}, Bitcoin is actually about twice as expensive.
 
@@ -368,7 +372,7 @@ To make sure that the payments have been sent through in a timely fashion, each 
 \end{figure}
 
 \section{Example Workflow}
-Firstly, you will install the Hadron Wrapper tool designed for developing blockchains. You will run \texttt{hadron init} inside of a project directory and generate a chain. From there, you'll install the packages you need for your application using the Hadron Hub, or our package manager named 'flora.' Let's say you want to add a new ERC20 asset. Run \texttt{flora install erc20} inside of the project directory, and a new token will be generated. To deploy the contracts to the chain, run \texttt{hadron start}, and then \texttt{hadron deploy all}.
+Firstly, you will install the Hadron Wrapper tool designed for developing blockchains. You will run ‘\texttt{hadron init}' inside of a project directory and generate a chain. From there, you'll install the packages you need for your application using the Hadron Hub, or our package manager named ‘texttt{flora}.' Let's say you want to add a new ERC20 asset. Run ‘\texttt{flora install erc20}' inside of the project directory, and a new token will be generated. To deploy the contracts to the chain, run ‘\texttt{hadron start}', and then ‘\texttt{hadron deploy all}'.
 
 From there, you can access the administrative dashboard if you want to graphically interact with your blockchain. You can install packages from here, add accounts, see transactions, etc. etc. much like Etherscan or another block explorer software. You will also have Remix and other smart contract development tools here as well.
 
