--- a/main.tex
+++ b/main.tex
@@ -72,7 +72,9 @@ Laid out in this white paper is our critiques of the current state of the market
 
 There are many fundamental flaws with the blockchain architecture that prevent it from becoming a mainstream technology. These flaws exist on both the user’s side as well as the developer\,/\,service provider’s side. Laid out are the areas in which we improve upon the current blockchain implementations with this project.
 
-\subsection{Transaction Fees}
+\begin{center}
+\textbf{Transaction Fees}
+\end{center}
 
 Firstly, let’s take a look at the problem with transaction fees from an end user standpoint. The key to success in the crypto space is mass adoption of Bitcoin in the international market. As it stands at this time of writing, the average transaction fee for a Bitcoin transaction is at around 6\%\cite{bitcoinfees}. Compared to centralized systems such as PayPal\cite{paypalfees}, Mastercard\cite{mastercardfees}, and Visa\cite{visafees}, Bitcoin is actually about twice as expensive.
 
